...
    <Tabs screenOptions={screenOptions}>
      <Tabs.Screen
        name="index"
        options={{
          header: () => <AssetsNavbar />,
          title: 'Home',
          tabBarButtonTestID: 'home-tab',
          tabBarButton: ({ children, ref, ...rest }) => {
            return (
              <Pressable {...rest} style={styles.tabButton}>
                {children}
              </Pressable>
            )
...
        name="transactions"
        options={{
          title: 'Transactions',
          headerTitle: () => <TransactionHeader />,
          headerStyle: { shadowColor: 'transparent' },
          headerLeftContainerStyle: { flexGrow: 0 },
          tabBarButtonTestID: 'transactions-tab',
          tabBarLabel: 'Transactions',
          tabBarButton: ({ children, ref, ...rest }) => {
            return (
              <Pressable {...rest} style={styles.tabButton}>
                {children}
              </Pressable>
...
