import { View } from 'tamagui'
import { ReviewSendContainer } from '@/src/features/Send'

function ReviewScreen() {
  return (
    <View flex={1}>
      <ReviewSendContainer />
    </View>
  )
}

export default ReviewScreen
