...
        isFetching={isFetching}
        hasLocalSigners={!!signersGroupedBySection.imported?.data.length}
        signersGroup={signersSections}
      />
      <View paddingTop={'$2'} paddingBottom={bottom + getTokenValue(Platform.OS === 'ios' ? '$0' : '$4')}>
        <SafeButton onPress={onPress} testID={'continue-button'}>
          Continue
        </SafeButton>
      </View>
      <ToastViewport multipleToasts={false} left={0} right={0} />
    </>
  )
}
...
