...
  onPress: () => void
} & Partial<SafeListItemProps>

export const StakingTxWithdrawCard = ({ info, onPress, ...rest }: StakingTxWithdrawCardProps) => {
  return (
    <SafeListItem
      label={`Claim`}
      icon="transaction-stake"
      type={'Stake'}
      onPress={onPress}
      {...rest}
      rightNode={
        <TokenAmount
...
