...
  return (
    <Stack
      screenOptions={({ navigation }) => ({
        headerBackButtonDisplayMode: 'minimal',
        headerShadowVisible: false,
        headerLeft: (props) => (
          <HeaderBackButton {...props} testID={'go-back'} onPress={navigation.goBack} displayMode={'minimal'} />
        ),
        headerStyle: {
          // backgroundColor: '#121312',
        },
      })}
    >
...
