appId: ${APP_ID}
tags:
  - util
---
- tapOn:
    id: 'transaction-details-button'

# ===========================================
# Test Data Tab
# ===========================================
- runFlow:
    file: ../components/advanced-details/data.yml

# ===========================================
# Test Parameters Tab
# ===========================================
- tapOn: 'Parameters'
- runFlow:
    file: ../components/advanced-details/parameters.yml

# ===========================================
# Return to previous screen
# ===========================================
- tapOn:
    id: 'go-back'
